<resources>
    <string name="app_name">My Application</string>
    <string name="name_call">Call</string>
    <string name="name_contacts">Contacts</string>
    <string name="name_rec">Recently</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="star">*</string>
    <string name="hashtag">#</string>

    <string name="plus">+</string>
    <string name="clear">Clear</string>
    <string name = "add">add</string>
    <string name = "contacts">Contacts</string>
    <string name = "new_contact">New contact</string>
    <string name = "back">back</string>
    <string name = "confirm">confirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>