<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id = "@+id/placeChange"
        android:layout_width="405dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Contacts"
        android:layout_width="138dp"
        android:layout_height="99dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="bottom|center_horizontal"
        android:onClick="contacts"
        android:text="@string/name_contacts"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Call"
        android:layout_width="138dp"
        android:layout_height="99dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="bottom|center_horizontal"
        android:onClick="call"
        android:text="@string/name_call"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/recCalled"
        android:layout_width="137dp"
        android:layout_height="99dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="bottom|center_horizontal"
        android:onClick="recCalled"

        android:text="@string/name_rec"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>